# snfpy

./: .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.LESSER  Dockerfile  MANIFEST.in  README.md  Singularity  devel_requirements.txt  generate_snfpy_images.sh  requirements.txt  setup.cfg  setup.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
snf/: R.py  __init__.py  _version.py  cluster.py  compute.py  cv.py  datasets.py  info.py  matlab.py  metrics.py  plotting.py  snf.py  utils.py
snf/tests/: conftest.py  test_bootstrap.py  test_compute.py  test_cv.py  test_gridsearch.py  test_metrics.py  test_snf.py  test_utils.py
snf/tests/data/: label.csv
snf/tests/data/digits/: fourier.csv  label.csv  pixel.csv  profile.csv  zer.csv
snf/tests/data/sim/: data1.csv  data2.csv
